k8n/base/metrics/service-loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
  selector:
    app: loki
  type: ClusterIP
